--- a/cms_people/templates/cms_people/includes/map_result.html
+++ b/cms_people/templates/cms_people/includes/map_result.html
@@ -3,4 +3,4 @@
 {% block form_url %}{% url 'people:person' object.username %}{% endblock %}
 {% block title %}{{ object.username }}{% endblock %}
 {% block description %}{{ object.short_address }}{% endblock %}
-{% block image_url %}{{ object.avatar.url }}{% endblock %}
+{% block image_url %}{% if object.avatar %}{{ object.avatar.url }}{% endif %}{% endblock %}
