--- a/cms_association/templates/cms_association/includes/map_result.html
+++ b/cms_association/templates/cms_association/includes/map_result.html
@@ -2,5 +2,5 @@
 
 {% block form_url %}{% url 'association:association' object.slug %}{% endblock %}
 {% block title %}{{ object.name }}{% endblock %}
-{% block description %}{% endblock %}
+{% block description %}{{ object.short_address }}{% endblock %}
 {% block image_url %}{% if object.logo %}{{ object.logo.url }}{% endif %}{% endblock %}
