Remove header in map templates and fixed variable fail for header scss.

--- a/cms_contact/templates/cms_contact/map.html
+++ b/cms_contact/templates/cms_contact/map.html
@@ -1,6 +1,10 @@
 {% extends "cms_people/base.html" %}
 {% load static i18n %}
 
+{% block header %}
+    {% include bs3_conf.BOOTSTRAP3_MENU_TEMPLATE %}
+{% endblock %}
+
 {% block content %}
     <div id="people">
         <div id="mapid"></div>
