--- a/cms_people/templates/cms_people/address.html
+++ b/cms_people/templates/cms_people/address.html
@@ -1,6 +1,12 @@
 {% extends "cms_people/profile.html" %}
 {% load sekizai_tags static bootstrap3 i18n %}
 
+
+{% block header %}
+    {% include bs3_conf.BOOTSTRAP3_MENU_TEMPLATE %}
+{% endblock %}
+
+
 {% block top %}
     <iframe width="100%" height="250" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" id="map"
             src="http://www.openstreetmap.org/export/embed.html?bbox=-3.357696533203125%2C36.58520897112158%2C-2.21099853515625%2C37.082023438186766&amp;layer=cyclemap&marker=51.89297,-8.49417"></iframe>
